--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME="MultiTenant Lab"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -8,12 +8,18 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
+DB_CONNECTION=tenant
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=null
 DB_USERNAME=root
 DB_PASSWORD=
+
+LANDLORD_DB_HOST=127.0.0.1
+LANDLORD_DB_PORT=3306
+LANDLORD_DB_DATABASE=multitenant_lab_landlord
+LANDLORD_DB_USERNAME=root
+LANDLORD_DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
